# pytorch-DL-class-trainer

./: BaseDLFramework.py  BaseDLFrameworkDDP.py  LICENSE  README.md  pyproject.toml
Examples/: MLPexample.py  trainer_batch.sh
examples/: DDP_batch.sh  InheritanceExample.ipynb  MLPexample.py  MLPexampleDDP.py  README.md  trainer_batch.sh
examples/snapshot/: snapshot_[16, 32]_0.001_50.pt  snapshot_[16]_0.001_20.pt  snapshot_[16]_0.001_50.pt  snapshot_[32]_0.001_50.pt
